fixing spacing between elements on homepage

--- a/homepages/assets/less/inn.less
+++ b/homepages/assets/less/inn.less
@@ -12,11 +12,14 @@
   #hero {
     background-color:white;
     background-size:contain;
-    margin-bottom: 1em;
     padding:0;
     height:48vw;
     position:relative;
     overflow:hidden;
+
+    img {
+      width:100%;
+    }
 
     @media only screen and (max-width: 600px) {
       background:unset;
@@ -37,7 +40,7 @@
       bottom:0;
       width:auto;
       display:block;
-      padding: 0.5em 2em;
+      padding: 1.5em 2em 1em;
 
       .row-fluid {
         max-width: 1170px;
@@ -74,6 +77,7 @@
         color:#fff;
         line-height: 1.3;
         font-weight: 300;
+        font-size:18px;
         @media only screen and (max-width: 600px) {
           color:#000;
         }
@@ -84,7 +88,9 @@
       }
     }
   }
-
+  #top-widgets {
+    padding-top:3em;
+  }
   #homepage-top-right {
     ol {
 	  margin: 0;
